--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.imbuegen.alumniapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +21,10 @@
         </activity>
         <activity android:name=".CompanyActivity" />
         <activity android:name=".AlumniActivity" />
-        <activity android:name=".AlumniInfoActivity"></activity>
+        <activity android:name=".AlumniInfoActivity" />
+        <activity android:name=".DepartmentsActivity" />
+        <activity android:name=".RegistrationActivity" android:theme="@style/mNoActionBar"/>
+        <activity android:name=".LoginActivity" android:theme="@style/mNoActionBar"/>
     </application>
 
 </manifest>
